test/compilable/imports/foofunc.d
module imports.foofunc;
void foo() { }
