test/fail_compilation/fail170.d

void foo(final out int x) { }

